클래스적용

--- a/style/day11_car.css
+++ b/style/day11_car.css
@@ -24,6 +24,7 @@ main #video .tab_title a {
     padding:20px 30px; display:inline-block;
 }
 main #video .tab_title a:last-child{border-bottom:5px solid #fff;}
+/* 탭 제목 활성화 디자인 + js class 호출용 */
 main #video .tab_title a.active {
     border-bottom:5px solid #3A87FC;
 }
@@ -53,6 +54,7 @@ main #menu .tab_title a {
     
 }
 main #menu .tab_title a:last-child {margin-right:0;}
+/* 탭 제목 활성화 디자인 + js class 호출용 */
 main #menu .tab_title a.active {
     border:1px solid #888;
     border-bottom:1px solid #fff;
